@@ -115,12 +115,8 @@ ModificationExecutor<FetcherType, ModifierType>::produceOrSkip(
   auto stats = ModificationStats{};
 
   auto const maxRows = std::invoke([&] {
-    if constexpr (std::is_same_v<ModifierType, UpsertModifier>) {
-      return std::min(produceOrSkipData.maxOutputRows(),
-                      _modifier->getBatchSize());
-    } else {
-      return produceOrSkipData.maxOutputRows();
-    }
+    return std::min(produceOrSkipData.maxOutputRows(),
+                    _modifier->getBatchSize());
   });
 
   // Read as much input as possible
